--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 # https://help.github.com/en/articles/metadata-syntax-for-github-actions
-name: "GH Release"
+name: "GH Release forked"
 description: "Github Action for creating Github Releases"
 author: "softprops"
 inputs:
